@@ -1,3 +1,8 @@
+M.m.p
+-----
+1. Add action to create favourite folders.
+2. Allow moving favourites into folders.
+
 0.9.5
 -----
 1. When updating now-playing, prefer trackartist and trackartist_ids to artist
